@@ -2,7 +2,7 @@
 <beans>
 
 	<bean id="manager" class="edu.mcw.rgd.dataload.ontologies.Manager">
-        <property name="version" value="ONTOLOGY LOAD pipeline  -- build  Nov 01, 2022" />
+        <property name="version" value="ONTOLOGY LOAD pipeline  -- build  Jan 20, 2023" />
 
         <!-- for security reasons, actual value of the API KEY should not be stored in public github code -->
         <property name="apiKeyFile" value="properties/api.key"/>
@@ -32,7 +32,8 @@
                 <entry key="CS" value="ftp://ftp.rgd.mcw.edu/pub/ontology/chinchilla/CS.obo"/>
 
                 <entry key="SO" value="https://github.com/The-Sequence-Ontology/SO-Ontologies/raw/master/Ontology_Files/so-simple.obo"/>
-                <entry key="CL" value="https://raw.githubusercontent.com/obophenotype/cell-ontology/master/cl-basic.obo"/>
+
+                <entry key="CL" value="https://github.com/obophenotype/cell-ontology/releases/download/v2022-01-09/cl-basic.obo"/>
 
                 <entry key="MA" value="http://www.informatics.jax.org/downloads/reports/adult_mouse_anatomy.obo"/>
                 <!--<entry key="RDO" value="http://ctdbase.org/reports/CTD_diseases.obo.gz"/>-->
